feat: day23 solved